# mio

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  form.cpp  http.cpp  simple_http.cpp
examples/form/: index.html
examples/simple_http/: index.html
examples/static/: index.html
examples/static/simple_http/: style.css
include/mio/: application.hpp  http_headers.hpp  http_request.hpp  http_response.hpp  http_server.hpp  router.hpp  uri.hpp
include/mio/bodies/: x_www_form_url_encoded.hpp
include/mio/http1/: header.hpp  request.hpp  request_parser.hpp  response.hpp
include/mio/middlewares/: static.hpp
include/mio/sockets/: socket.hpp
include/mio/util/: trim.hpp
src/mio/: CMakeLists.txt  application.cpp  http_headers.cpp  http_server.cpp  router.cpp
src/mio/bodies/: x_www_form_url_encoded.cpp
src/mio/http1/: request.cpp  request_parser.cpp  response.cpp
src/mio/middlewares/: static.cpp
src/mio/sockets/: socket.cpp
test/: CMakeLists.txt  test.cpp  test_http_headers.cpp  test_router.cpp  test_uri.cpp
test/http1/: test_request.cpp  test_request_parser.cpp  test_response.cpp
